<resources>
    <!--<string name="app_name">ਖਬਰਨਾਮਾ</string>-->
    <string name="app_name">Khabarnama</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <dimen name="button_width">32dp</dimen>
    <dimen name="small_button_width">28dp</dimen>
    <dimen name="small_image_art_width">85dp</dimen>
    <string name="action_settings">Settings</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>

    <string name="copyright">© 2016 Mehra Media</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">Please wait...</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_info">Information</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_warning">Warning</string>
    <string name="title_unsupported">Unsupported format</string>
    <string name="title_channel_error">Radio Station Error.Please try again later!</string>
    <string name="title_contact_us">Contact us</string>
    <string name="info_contact_us">Contact us if you need any help</string>
    <string name="link_contact_us">Email</string>
    <string name="format_status_info">Status:%1$s</string>
    <string name="format_info_default">Wellcome to %1$s</string>
    <string name="title_website">Website</string>
    <string name="info_website">Visit our website</string>
    <string name="title_twitter">Twitter</string>
    <string name="info_twitter">Visit our twitter</string>
    <string name="title_google_plus">Podcast</string>
    <string name="info_google_plus">All old show here</string>
    <string name="title_facebook">Facebook</string>
    <string name="info_facebook">Visit our fanpage</string>
    <string name="title_play">Play</string>
    <string name="title_stop">Stop</string>
    <string name="title_tab_radio">Radio</string>
    <string name="title_tab_about_us">About Us</string>
    <string name="title_name">Name</string>
    <string name="title_send">Send</string>
    <string name="info_version_format">Version: %1$s</string>
    <string name="loading_more">Loading More Radios</string>
    <string name="quit_message">Do you want to quit this application?</string>
    <string name="title_warning_close">Exit</string>
    <string name="info_lose_internet">No internet connection.Please check again!</string>
    <string name="info_empty">Name, Phone/Email, Message can not empty!</string>
    <string name="info_close_app">Do you want to exit the application?</string>
    <string name="info_server_error">We can not connect to server.Please try again!</string>
    <string name="info_login_facebook_error">Login facebook error!Try again</string>
    <string name="info_login_twitter_error">Login twitter error!Try again</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="idle">Radio khabarnama</string>
    <string name="empty_text">Radio Khabarnama</string>
    <string name="custon_notification">Radio Khabarnama</string>
    <string name="khabarnama">khabarnama</string>
    <string name="no_internet_connection">no internet connection!</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="_6_12">5:13</string>
    <string name="download">Download</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="radio_khabarnama">Radio khabarnama</string>
    <string name="home">Home</string>
    <string name="social">Social</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
</resources>
