<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">    <group android:checkableBehavior="single">        <item            android:id="@+id/nav_home"            android:icon="@drawable/ic_home_black_24dp"            android:title="@string/home" />        <item            android:id="@+id/nav_social"            android:icon="@drawable/ic_social_black_24dp"            android:title="@string/social" />        <item            android:id="@+id/nav_panu"            android:icon="@drawable/ic_rate_black_24dp"            android:title="jatinder Panu" />        <item            android:id="@+id/nav_Rate"            android:icon="@drawable/ic_rate_black_24dp"            android:title="@string/rate_us" />        <item            android:id="@+id/nav_about"            android:icon="@drawable/ic_about_black_24dp"            android:title="@string/about" />    </group></menu>