<?xml version="1.0" encoding="utf-8"?>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/cardView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="2dp"
                                        card_view:cardUseCompatPadding="true"
                                        card_view:cardMaxElevation="1dp"
                                        card_view:cardElevation="1dp">
        <!-- overflow button. It has a Popup Menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                >

                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feb"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textColor="@color/Black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:maxLines="1"
                    android:layout_marginTop="4dp"
                    android:text="@string/description"
                    android:textColor="@color/sub_title_color"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6_12"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/time_color"
                    android:textSize="12sp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_download"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_download"
                    card_view:srcCompat="@drawable/ic_file_download_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/download"
                    android:textSize="10sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

